Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-46547

Since 5.4.2, cannot install Qt with online installer behind a proxy

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • None
    • 5.4.2
    • Packaging & Installer
    • None

    Description

      Trying to use MaintenanceTool behind an Enterprise proxy. The problem is that it returns to the proxy username/password prompt again and again, and does not accept the credentials given. I know the proxy itself functions because we use it regularly (and I'm using it now to access this bug reporter).

      Strangely, when I specify my Qt account/password at the start of the install/update process, it accepts the proxy credentials then and logs in. However after that, when it is trying to access the repositories, it then does not accept the credentials and goes back to the prompt over and over.

      Attached is a text file of the MaintenanceTool --verbose output for this.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kkohne Kai Köhne
            radinator RaySwartz
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes