Fix usage of system proxy with credentials

So far we've been using the entered credentials only for custom
proxies on Windows and OS X. If one selected 'System Proxy' we asked
or the credentials, but tried again without setting them.

This fixes a regression introduced in 2.0, where we started to
interactively ask for credentials.

Task-number: QTBUG-46547
Change-Id: If059a9c68a0976db0453abdc795d9546c4b3aa4a
Reviewed-by: Niels Weber <niels.weber@theqtcompany.com>
Reviewed-by: Karsten Heimrich <karsten.heimrich@theqtcompany.com>